--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -84,19 +84,21 @@
   }
 } /*# sourceMappingURL=main.css.map */
 
-
 /* XXXXXXXXXXXXX MEDIA QUERIES  XXXXXXXXXXXXX */
 /* 1200-1800px: desktop --> no need to specify for this because this is default */
-@media (max-width: 1800px) {}
+@media (max-width: 1800px) {
+}
 /* 900-1200px: Tablet landscape mode */
-@media (max-width: 1200px) {}
+@media (max-width: 1200px) {
+}
 /* 600-900px: Tablet portrait mode */
-@media (max-width: 900px) {}
+@media (max-width: 900px) {
+}
 /* 400-600px:  Phone */
 @media (max-width: 600px) {
   #nav-scroll {
-    top: 1rem; /* DESKTOP: 2rem:(space) + 3:(menu) + 2:(space) */  /* MOBILE: 1rem:(space) */
-    height: 5rem;  /* DESKTOP: 100vh:(viewport) - 7rem:(menu+spaces) - 2rem:(space)   */    /* MOBILE: 1rem(arrow-up) + 3rem:(menu) + 1rem:(arrow-down) */
+    top: 1rem; /* DESKTOP: 2rem:(space) + 3:(menu) + 2:(space) */ /* MOBILE: 1rem:(space) */
+    height: 5rem; /* DESKTOP: 100vh:(viewport) - 7rem:(menu+spaces) - 2rem:(space)   */ /* MOBILE: 1rem(arrow-up) + 3rem:(menu) + 1rem:(arrow-down) */
   }
   #nav-scroll li {
     height: 1rem;
@@ -104,7 +106,7 @@
     background-color: transparent;
     border-radius: 0%;
   }
-  #nav-gallery { 
+  #nav-gallery {
     top: 7rem;
     left: 7rem;
     height: 3rem;
@@ -118,6 +120,27 @@
     --sqSize: calc(((100vw - 12rem) / 15));
   }
 
+  #paintings article {
+    padding-top: 9rem;
+  }
+  #paintings figure {
+    div.technique {
+      background-color: var(--intense-purple-transp);
+      margin: 0;
+      padding: 15px;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      opacity: 0;
+      transition: all 0.5s ease;
+    }
+    & img:hover ~ div.technique,
+    & div.technique:hover {
+      opacity: 1;
+    }
+
+  }
 }
 /* 0-400px: Small-phone */
-@media (max-width: 400px) {}
+@media (max-width: 400px) {
+}
